-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.0
-
Windows 10
-
9a44e3b6ca81f0e84d774a95e45b449b5d4cb583 a5ec1097a0e1fe8c18a18ebe6f891329e276d81c
debugger asserts when inspecting a QJsonObject:
QVariant::save: unable to save type 'QJsonObject' (type id: 46). kernel\qvariant.cpp: 2143
Steps to reproduce:
- run the sample attached
- inspect 'root' item (please see the attached 'debugger_bug.png' attached)
EXPECTED: the item can be inspected without problems
ACTUAL: the debugger asserts
| For Gerrit Dashboard: QTBUG-68474 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 230445,3 | QML Debugger: Don't crash when encoding JSON data | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 230451,2 | Debugger: Support nested properties in QML inspector | 4.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 230843,1 | Debugger: Support nested properties in QML inspector | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |